plugins {
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.5'
    id 'java'
    id 'idea'
    id 'jacoco'
}

group = 'com.capacidad.identityservice'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot starters
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.boot:spring-boot-starter-undertow"
    implementation "org.springframework.boot:spring-boot-starter-hateoas"
    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation "org.springframework.boot:spring-boot-starter-actuator"
    implementation "org.springframework.boot:spring-boot-starter-mail"
    implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
    implementation "org.springframework.boot:spring-boot-starter-data-redis"
    implementation "org.springframework.boot:spring-boot-starter-validation"

    // Spring Security OAuth2 / JWT
    implementation "org.springframework.security:spring-security-oauth2-jose"
    implementation "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
    implementation 'org.springframework.security:spring-security-oauth2-authorization-server:1.2.3'
    implementation "org.springframework.security:spring-security-messaging"
    implementation "org.springframework:spring-messaging"

    // Base de datos y utilidades
    implementation "org.flywaydb:flyway-core"
    implementation "org.apache.commons:commons-pool2:2.6.2"
    implementation "com.warrenstrange:googleauth:1.5.0"
    implementation 'org.postgresql:postgresql:42.7.7'
    implementation "org.modelmapper:modelmapper:2.3.5"
    implementation 'org.apache.commons:commons-lang3:3.18.0'
    implementation 'org.json:json:20231013'

    // Lombok
    compileOnly "org.projectlombok:lombok:1.18.30"
    annotationProcessor "org.projectlombok:lombok:1.18.30"
    testCompileOnly "org.projectlombok:lombok:1.18.30"
    testAnnotationProcessor "org.projectlombok:lombok:1.18.30"

    // 🔥 Test dependencies (usando BOM para unificar versiones)
    testImplementation(platform("org.junit:junit-bom:5.10.0"))
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'

    testImplementation 'org.mockito:mockito-core:5.5.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'
    testImplementation 'org.assertj:assertj-core:3.24.2'

    // Starter de test de Spring Boot, pero EXCLUYENDO JUnit 4 y libs viejas
    testImplementation("org.springframework.boot:spring-boot-starter-test") {
        exclude group: "junit", module: "junit"
        exclude group: "org.mockito", module: "mockito-core"
        exclude group: "org.assertj", module: "assertj-core"
    }

    // Librerías locales
    implementation fileTree(include: ['utils-1.0-SNAPSHOT.jar'], dir: 'libs')
}

jacocoTestReport {
    reports {
        xml.required.set(false)
        csv.required.set(false)
        html.outputLocation.set(layout.buildDirectory.dir("jacocoHtml"))
    }
    getClassDirectories().setFrom(classDirectories.files.collect {
        fileTree(dir: it, exclude: [
                'com/capacidad/identityservice/config/oauth/**',
                'com/capacidad/identityservice/config/security/**',
                'com/capacidad/identityservice/functional/**',
                'com/capacidad/identityservice/model/**',
                'com/capacidad/identityservice/exception/**',
                'com/capacidad/identityservice/repository/**',
                'com/capacidad/identityservice/service/impl/**',
                'com/capacidad/identityservice/specification/**'
        ])
    })
}

// Configuración de tests
test {
    useJUnitPlatform() // Muy importante para detectar JUnit 5
    testLogging {
        events "passed", "skipped", "failed"
    }
}
